// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateCustomTransaction with deposit matches the snapshot 1`] = `
<section
  class="css-q5fqw0"
>
  <form>
    <input
      placeholder="0"
      type="text"
      value="0.00"
    />
    <button
      class="css-1ge74h7"
      color="#9DB06A"
      type="submit"
    >
      <span>
        USER_TRANSACTION_CREATE_CUSTOM_DEPOSIT_BUTTON
      </span>
    </button>
  </form>
</section>
`;

exports[`CreateCustomTransaction with dispense matches the snapshot 1`] = `
<section
  class="css-q5fqw0"
>
  <form>
    <input
      placeholder="0"
      type="text"
      value="0.00"
    />
    <button
      class="css-9uowof"
      color="#E86C76"
      type="submit"
    >
      <span>
        USER_TRANSACTION_CREATE_CUSTOM_DISPENSE_BUTTON
      </span>
    </button>
  </form>
</section>
`;
